--- a/style.css
+++ b/style.css
@@ -13,12 +13,53 @@ div.container{
   background-color              : #e5e5e5;
 }
 
-div.container div.top{
+.pointer{
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top:-10px;
+  left: 0;
+  right: 0;
+  margin:auto;
+  background-color: #fff;
+  -webkit-transform:rotate(45deg);
+  -moz-transform:rotate(45deg);
+}
+
+div.container .top{
   width                         : inherit;
   height 						: 300px;
-  background-color 				: red;
   overflow 						: hidden;
 }
+
+.top .slideshow{
+  width             : 700px;
+  height              : 300px;
+  margin              : 80px auto 0;
+  position            : relative;
+  overflow            : hidden;
+}
+.top .slideshow .train{
+  width             : 9999px;
+  height              : inherit;
+  position            : absolute;
+  left                : 300px;
+  top                 : 0;
+}
+
+.top .slideshow .train .local-train{
+  width: 200px;
+  height: 100px;
+  line-height: 100px;
+  float: left;
+}
+
+.top .slideshow .train .local-train h1{
+  width: 100px;
+  text-align: center;
+  cursor: pointer;
+}
+
 
 div.container div.bottom{
   position 						: relative;
